# wrdlist

./: Cargo.toml  LICENSE  Makefile  README.md
src/: cli.rs  generator.rs  main.rs  utils.rs
