[package]
name = "wrdlist"
version = "0.0.2"
edition = "2024"
repository = "https://github.com/6z7y56/wrdlist"
description = "Lightweight Wordlists Generator"
license = "MIT"
readme = "README.md"
keywords = ["wordlist", "generator", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
